--- a/OrganizerAPI/OrganizerAPI.Infrastructure/OrganizerAPI.Infrastructure.csproj
+++ b/OrganizerAPI/OrganizerAPI.Infrastructure/OrganizerAPI.Infrastructure.csproj
@@ -12,4 +12,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrganizerAPI.Models\OrganizerAPI.Models.csproj" />
+  </ItemGroup>
+
 </Project>
