--- a/OrganizerAPI/OrganizerAPI.Domain/OrganizerAPI.Domain.csproj
+++ b/OrganizerAPI/OrganizerAPI.Domain/OrganizerAPI.Domain.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrganizerAPI.Infrastructure\OrganizerAPI.Infrastructure.csproj" />
+    <ProjectReference Include="..\OrganizerAPI.Models\OrganizerAPI.Models.csproj" />
+  </ItemGroup>
+
 </Project>
