--- a/OrganizerAPI/OrganizerAPI/OrganizerAPI.csproj
+++ b/OrganizerAPI/OrganizerAPI/OrganizerAPI.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
       <PrivateAssets>all</PrivateAssets>
@@ -13,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OrganizerAPI.Domain\OrganizerAPI.Domain.csproj" />
     <ProjectReference Include="..\OrganizerAPI.Infrastructure\OrganizerAPI.Infrastructure.csproj" />
   </ItemGroup>
 
