--- a/OrganizerAPI/OrganizerAPI.Domain/OrganizerAPI.Domain.csproj
+++ b/OrganizerAPI/OrganizerAPI.Domain/OrganizerAPI.Domain.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OrganizerAPI.Infrastructure\OrganizerAPI.Infrastructure.csproj" />
     <ProjectReference Include="..\OrganizerAPI.Models\OrganizerAPI.Models.csproj" />
+    <ProjectReference Include="..\OrganizerAPI.Shared\OrganizerAPI.Shared.csproj" />
   </ItemGroup>
 
 </Project>
