--- a/OrganizerAPI/OrganizerAPI/appsettings.json
+++ b/OrganizerAPI/OrganizerAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "JWTSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, IT CAN BE ANY STRING"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
