--- a/OrganizerAPI/OrganizerAPI.Domain/OrganizerAPI.Domain.csproj
+++ b/OrganizerAPI/OrganizerAPI.Domain/OrganizerAPI.Domain.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="10.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
   </ItemGroup>
 
   <ItemGroup>
