--- a/OrganizerAPI/OrganizerAPI.Infrastructure/OrganizerAPI.Infrastructure.csproj
+++ b/OrganizerAPI/OrganizerAPI.Infrastructure/OrganizerAPI.Infrastructure.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="5.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7">
       <PrivateAssets>all</PrivateAssets>
@@ -14,6 +16,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OrganizerAPI.Models\OrganizerAPI.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
